Constructors block update