@@ -22,7 +22,7 @@
 
     <!--region General-->
     <java.version>20</java.version>
-    <minimal.maven.version>3.9.3</minimal.maven.version>
+    <minimal.maven.version>3.9.4</minimal.maven.version>
     <spring-boot.version>3.1.2</spring-boot.version>
     <revision>0.0.1</revision>
     <changelist>-SNAPSHOT</changelist>
@@ -31,7 +31,7 @@
 
     <!--region Bills of material (BOM)-->
     <spring-cloud.version>2022.0.4</spring-cloud.version>
-    <testcontainers.version>1.18.3</testcontainers.version>
+    <testcontainers.version>1.19.0</testcontainers.version>
     <!--endregion-->
 
     <!--region Libs-->
@@ -40,21 +40,24 @@
     <spotbugs.version>4.7.3</spotbugs.version>
     <annotations.version>24.0.1</annotations.version>
     <jcip-annotations.version>1.0</jcip-annotations.version>
-    <springdoc-openapi.version>2.1.0</springdoc-openapi.version>
-    <error_prone_annotations.version>2.21.0</error_prone_annotations.version>
+    <springdoc-openapi.version>2.2.0</springdoc-openapi.version>
+    <error_prone_annotations.version>2.21.1</error_prone_annotations.version>
     <!--endregion-->
 
     <!--region Test-libs-->
     <!--endregion-->
 
     <!--region Plugins-->
+    <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+    <maven.compiler.parameters>false</maven.compiler.parameters>
+
     <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
+    <maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
     <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
     <sonar-maven-plugin.version>3.9.1.2184</sonar-maven-plugin.version>
     <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
-    <maven-enforcer-plugin.version>3.3.0</maven-enforcer-plugin.version>
+    <maven-enforcer-plugin.version>3.4.0</maven-enforcer-plugin.version>
     <lombok-maven-plugin.version>1.18.20.0</lombok-maven-plugin.version>
-    <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
     <versions-maven-plugin.version>2.16.0</versions-maven-plugin.version>
     <spotbugs-maven-plugin.version>4.7.3.5</spotbugs-maven-plugin.version>
     <yaml-properties-maven-plugin.version>1.1.3</yaml-properties-maven-plugin.version>
@@ -292,10 +295,11 @@
           <configuration>
             <compilerArgs>
               <arg>--enable-preview</arg><!--maven.compiler.enablePreview-->
-              <arg>-Xlint:unchecked</arg>
-              <arg>-Xlint:preview</arg>
-              <!--<arg>-Awarns</arg>  &lt;!&ndash;CI: падать при наличии проблем &ndash;&gt;-->
-              <!--              <arg>-Astubs=jdk.astub</arg>-->
+
+              <arg>-Xlint:all</arg> <!--Включает все рекомендуемые предупреждения.-->
+              <arg>-Awarns</arg>  <!--CI: падать при наличии проблем -->
+              <!--<arg>-Astubs=jdk.astub</arg>-->
+              <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
               <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
               <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
               <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
@@ -314,20 +318,24 @@
                 <version>${lombok.version}</version>
               </processorPath>
               <processorPath>
+                <groupId>org.checkerframework</groupId>
+                <artifactId>checker</artifactId>
+                <version>${checker.version}</version>
+              </processorPath>
+              <processorPath>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-configuration-processor</artifactId>
                 <version>${spring-boot.version}</version>
               </processorPath>
-              <!--              <processorPath>-->
-              <!--                <groupId>org.checkerframework</groupId>-->
-              <!--                <artifactId>checker</artifactId>-->
-              <!--                <version>${checker.version}</version>-->
-              <!--              </processorPath>-->
             </annotationProcessorPaths>
             <annotationProcessors>
               <annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</annotationProcessor>
               <annotationProcessor>lombok.launch.AnnotationProcessorHider$ClaimingProcessor</annotationProcessor>
-              <!--              <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>-->
+              <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
+              <annotationProcessor>org.checkerframework.checker.interning.InterningChecker</annotationProcessor>
+              <annotationProcessor>org.checkerframework.checker.fenum.FenumChecker</annotationProcessor>
+              <annotationProcessor>org.checkerframework.checker.formatter.FormatterChecker</annotationProcessor>
+              <annotationProcessor>org.checkerframework.checker.regex.RegexChecker</annotationProcessor>
               <annotationProcessor>org.springframework.boot.configurationprocessor.ConfigurationMetadataAnnotationProcessor</annotationProcessor>
             </annotationProcessors>
           </configuration>
@@ -360,10 +368,27 @@
           <version>${maven-source-plugin.version}</version>
           <executions>
             <execution>
-              <id>attach-sources:verify:jar-no-fork</id>
+              <id>attach-sources:package:jar-no-fork</id>
               <phase>package</phase>
               <goals>
                 <goal>jar-no-fork</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>${maven-javadoc-plugin.version}</version>
+          <configuration>
+            <release>${java.version}</release>
+            <additionalOptions>--enable-preview</additionalOptions>
+          </configuration>
+          <executions>
+            <execution>
+              <id>attach-javadocs:package:jar</id>
+              <!--<phase>package</phase> &lt;!&ndash; default &ndash;&gt;-->
+              <goals>
+                <goal>jar</goal>
               </goals>
             </execution>
           </executions>
@@ -811,6 +836,9 @@
         <!--suppress MavenModelInspection -->
         <artifactId>maven-source-plugin</artifactId>
       </plugin>
+<!--      <plugin>-->
+<!--        <artifactId>maven-javadoc-plugin</artifactId>-->
+<!--      </plugin>-->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
